--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </header>
 
   <section id="about">
-    <h2>WHO</h2>
+    <h2>WHO/个人信息</h2>
     <div class="about-content">
         <div class="mypicture">
             <img src="mypicture.jpg" alt="mypicture">
@@ -54,7 +54,7 @@
   </section>
 
   <section id="research">
-    <h2>STUDY</h2>
+    <h2>STUDY/学术研究</h2>
     <div class="research-projects">
       <div class="project">
         <h3>《Product design evaluation based on FAHP and cloud model》</h3>
@@ -82,7 +82,7 @@
   </section>
 
   <section id="portfolio">
-    <h2>DESIGN</h2>
+    <h2>DESIGN/设计作品</h2>
     <div class="portfolio-items">
       <div class="item">
         <img src="thumbnail1.jpg" alt="Item 1">
@@ -109,7 +109,7 @@
     </div>
   </section>
 
-  <section id="contact">
+  <section id="contact/联系方式">
     <h2>CONTACT</h2>
     <div class="contact-form">
       <div class="social-media">
