--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
     </div>
   </section>
 
-  <section id="contact/联系方式">
-    <h2>CONTACT</h2>
+  <section id="contact">
+    <h2>CONTACT/联系方式</h2>
     <div class="contact-form">
       <div class="social-media">
         <img src="social-media1.jpg" alt="social-media1">
