--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h5>Shaolong Chai and Zeng Wang∗（1/2）<h5>
         <p>项目描述项目描述项目描述项目描述项目描述项目描述项目描述项目描述项目描述项目描述</p>
         <h6>其他描述<h6>
-        <img src="project1.jpg" alt="Project 1">
+        <img src="https://cdn.jsdelivr.net/gh/[ZJU-design-csl]/[ZJU-2023-picture]@main/img/project1.jpg" alt="Project 1">
       </div>
       <div class="project">
         <h3>项目标题</h3>
