--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <img src="logo.png" alt="Logo">
       </div>
       <ul class="navigation">
-        <li><a href="#about">WHO</a></li>
-        <li><a href="#research">STUDY</a></li>
-        <li><a href="#portfolio">DESIGN</a></li>
+        <li><a href="#about">PROFILE</a></li>
+        <li><a href="#research">RESEARCH</a></li>
+        <li><a href="#portfolio">PORTFOLIO</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
     </nav>
@@ -27,7 +27,7 @@
   </header>
 
   <section id="about">
-    <h2>WHO/个人信息</h2>
+    <h2>Profile/个人信息</h2>
     <div class="about-content">
         <div class="mypicture">
             <img src="mypicture.jpg" alt="mypicture">
@@ -41,27 +41,28 @@
       <div class="skills">
         <h3>PROFESSIONAL ABILITY</h3>
         <ul>
-          <li>创新思维</li>
-          <li>用户体验设计</li>
-          <li>原型制作</li>
+          <li> Innovative Thinking</li>
+          <li> Prototype Making</li>
+          <li>Design Modeling</li>
+          <li>Product Rendering</li>
         </ul>
       </div>
       <div class="background">
-        <h3>CURRENTLY WORKING</h3>
-        <p>在XX大学获得工业设计学士学位，并在XX公司工作了X年。</p>
+        <h3>Main Experience</h3>
+        <p>In 2023, obtained a Bachelor's degree in Industrial Design from Nanchang University.</p>
       </div>
     </div>
   </section>
 
   <section id="research">
-    <h2>STUDY/学术研究</h2>
+    <h2>Research/学术研究</h2>
     <div class="research-projects">
       <div class="project">
         <h3>《Product design evaluation based on FAHP and cloud model》</h3>
         <h5>Shaolong Chai and Zeng Wang∗（1/2）<h5>
-        <p>项目描述项目描述项目描述项目描述项目描述项目描述项目描述项目描述项目描述项目描述</p>
-        <h6>其他描述<h6>
-        <img src="https://cdn.jsdelivr.net/gh/[ZJU-design-csl]/[ZJU-2023-picture]@main/img/project1.jpg" alt="Project 1">
+        <p>In view of the shortcomings of the existing evaluation methods in fully considering the fuzziness and randomness of product design evaluation, a novel product design evaluation method based on FAHP and cloud model is proposed.  The research show that compared with the other two methods, the Kendall rank correlation coefficients of entropy of the method are increased by 0.17 and 0.33, respectively, which proves that the method achieves more accurate evaluation result under the complex criteria.</p>
+        <h6>DOI: <a href="https://www.example.com">10.3233/JIFS-213331</a></h6>
+        <img src="project1.jpg" alt="Project 1">
       </div>
       <div class="project">
         <h3>项目标题</h3>
@@ -82,7 +83,7 @@
   </section>
 
   <section id="portfolio">
-    <h2>DESIGN/设计作品</h2>
+    <h2>Portfolio/设计作品</h2>
     <div class="portfolio-items">
       <div class="item">
         <img src="thumbnail1.jpg" alt="Item 1">
@@ -110,7 +111,7 @@
   </section>
 
   <section id="contact">
-    <h2>CONTACT/联系方式</h2>
+    <h2>Contact/联系方式</h2>
     <div class="contact-form">
       <div class="social-media">
         <img src="social-media1.jpg" alt="social-media1">
