--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h3>《Product design evaluation based on FAHP and cloud model》</h3>
         <h5>Shaolong Chai and Zeng Wang∗（1/2）<h5>
         <p>In view of the shortcomings of the existing evaluation methods in fully considering the fuzziness and randomness of product design evaluation, a novel product design evaluation method based on FAHP and cloud model is proposed.  The research show that compared with the other two methods, the Kendall rank correlation coefficients of entropy of the method are increased by 0.17 and 0.33, respectively, which proves that the method achieves more accurate evaluation result under the complex criteria.</p>
-        <h6>DOI: <a href="https://www.example.com">10.3233/JIFS-213331</a></h6>
+        <h6>DOI: <a href="https://content.iospress.com/articles/journal-of-intelligent-and-fuzzy-systems/ifs213331?resultNumber=0&totalResults=44&start=0&q=Product+design+evaluation+based+on+FAHP+and+cloud+model&resultsPageSize=10&rows=10">10.3233/JIFS-213331</a></h6>
         <img src="project1.jpg" alt="Project 1">
       </div>
       <div class="project">
